--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "@mui/x-data-grid": "^6.5.0",
+    "js-cookie": "^3.0.5",
     "mongoose": "^7.2.0",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "swr": "^2.1.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
