--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "@mui/x-data-grid": "^6.5.0",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-slideshow-image": "^4.2.1",
     "swr": "^2.1.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
