--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,11 @@
 MONGO_URL=
 NODE_ENV=
 JWT_SECRET_SEED=
+NEXTAUTH_SECRET=
 
 #Si lleva NEXT_PUBLIC es visible del lado del cliente
 NEXT_PUBLIC_TAX_RATE= 
+
+# Providers:
+GITHUB_ID=
+GITHUB_SECRET=
