--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+HOST_NAME=
+
 MONGO_URL=
 NODE_ENV=
 JWT_SECRET_SEED=
@@ -16,3 +18,6 @@ PAYPAL_SECRET=
 
 PAYPAL_OAUTH_URL=
 PAYPAL_ORDERS_URL=
+
+# Cloudinary Bucket Imagenes
+CLOUDINARY_URL=CLOUDINARY_URL=
