--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.37.0",
+    "formidable": "^2.1.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/formidable": "^2.0.6",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.7.18",
